--- a/index.html
+++ b/index.html
@@ -1,1 +1,64 @@
-Hello world!
+<head>
+	<style>
+		body{
+			margin:50px auto; 
+			max-width:650px; 
+			padding:0 10px; 
+			color:#444; 
+			line-height:1.6;
+		}
+		a:link{
+			color:#0077aa
+		}
+		a:visited{
+			color:#b10dc9
+		}
+	</style>
+</head>
+
+<body>
+	<h1>
+		Erik Wallin's Portfolio
+	</h1>
+	Welcome, I'm Erik Wallin, and you have found 
+	my programming and game development portfolio. 
+	Here you will see a number of programs and games
+	I have been part of, both as a solo developer and as 
+	team efforts. For more projects visit my
+	<a href="https://github.com/Skelpdar">Github profile</a>.
+	<br>
+	I can be reached at Skelpdar@gmail.com
+	<h1>
+	Projects
+	</h1>
+	
+	<h2>
+	Software Renderer
+	</h2>
+	<b>Description:</b> 
+	A 3D-rendering engine created as my high school thesis project. 
+	It uses SDL for graphic hardware access and Eigen for optimization.
+	All other 3D-rendering functionality is written by me from scratch. 
+	<br>
+	<b>Language and framework:</b> C++ and SDL<br>
+	
+	<h2>
+	Isometric Unity Game
+	</h2>
+	<b>Description:</b> A so far unnamed unity engine project 
+	that I am currently working on as the only programmer,
+	along with two graphic artists. 
+	<br>
+	<b>Language and framework:</b> C# and Unity engine.
+	
+	<h2>
+	Pyrate Map Generator
+	</h2>
+	<b>Description:</b>
+	A program that procedurally generates height data for a bunch of islands, and as the name suggests,
+	creates a pirate treasure map from this data. It is used here as an example of my python scripting
+	abilities.
+	<br>
+	<b>Language and framework: Python</b>
+	
+</body>
