--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		a:visited{
 			color:#b10dc9
 		}
+
 	</style>
 </head>
 
@@ -35,6 +36,7 @@
 	<h2>
 	Software Renderer
 	</h2>
+	<img src="https://github.com/Skelpdar/Skelpdar.github.io/blob/master/Progress09.PNG?raw=true">
 	<b>Description:</b> 
 	A 3D-rendering engine created as my high school thesis project. 
 	It uses SDL for graphic hardware access and Eigen for optimization.
@@ -44,6 +46,7 @@
 	
 	<h2>
 	Isometric Unity Game
+	<img src="https://github.com/Skelpdar/Skelpdar.github.io/blob/master/grovsylt1.PNG?raw=true">
 	</h2>
 	<b>Description:</b> A so far unnamed unity engine project 
 	that I am currently working on as the only programmer,
@@ -54,6 +57,7 @@
 	<h2>
 	Pyrate Map Generator
 	</h2>
+	<img src="https://raw.githubusercontent.com/Skelpdar/Skelpdar.github.io/master/map2.bmp?token=AFaL4XC6-Prpv6SbbJBR4fu-IoCo1BtJks5YtDWawA%3D%3D">
 	<b>Description:</b>
 	A program that procedurally generates height data for a bunch of islands, and as the name suggests,
 	creates a pirate treasure map from this data. It is used here as an example of my python scripting
