Wrote index page and changed menu text

--- a/CV.html
+++ b/CV.html
@@ -20,7 +20,7 @@ MathJax.Hub.Config({
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
-<div class="menu-category">Erik Wallin</div>
+<div class="menu-category">Menu</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="physicsmath.html">Physics/Math</a></div>
 <div class="menu-item"><a href="programming.html">Programming</a></div>
