--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@ MathJax.Hub.Config({
 <h3>Contact</h3>
 <p>Email: &lt;first-name&gt;&lt;last-name&gt;phys at gmail dot com
 </p>
+<p>Github: <a href="https://github.com/Skelpdar/" target=&ldquo;blank&rdquo;>External link</a>
+</p>
 </td>
 </tr>
 </table>
